<resources>
    <string name="app_name">DigitalStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DigitalStore</string>
    <string name="nav_header_subtitle">digitalstore@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_login">Acceder</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_carrito">Mi Carrito</string>
    <string name="menu_asistente">Chatbot</string>
    <string name="menu_sucursales">Nuestras Sucursales</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_pedidos">Mis pedidos</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="menu_calificar">¡Calificanos!</string>


    <string name="cantidad_articulos">Cantidad de artículos: %d</string>
    <string name="total_producto">Total: $%.2f</string>


</resources>

    <!-- MANEJO DE LOS NOMBRES DEL MENU A DE LOS TITULOS DEL BANNER -->