<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/icon_product"
            android:title="@string/menu_productos" />

        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/carrito"
            android:title="@string/menu_carrito" />
        <item
            android:id="@+id/nav_assistant"
            android:icon="@drawable/icon_asistente"
            android:title="@string/menu_asistente" /> <!-- Corregido: Utilizar string definido -->

        <item
            android:id="@+id/nav_sucursales"
            android:icon="@drawable/icon_sucursal"
            android:title="@string/menu_sucursales" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/pedidos"
            android:title="@string/menu_pedidos" />

        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/contacto"
            android:title="@string/menu_contacto" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/icon_user"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_calificar"
            android:icon="@drawable/calificar"
            android:title="@string/menu_calificar" />
    </group>
</menu>
