<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="android.studio.capystorecomputer.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_products"
        android:name="android.studio.capystorecomputer.ui.products.ProductsFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_assistant"
        android:name="android.studio.capystorecomputer.ui.assistant.AssistantFragment"
        android:label="@string/menu_asistente"
        tools:layout="@layout/fragment_assistant" />

    <fragment
        android:id="@+id/nav_sucursales"
        android:name="android.studio.capystorecomputer.ui.maps.MapsFragment"
        android:label="@string/menu_sucursales"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_contacto"
        android:name="android.studio.capystorecomputer.ui.contacto.ContactoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contacto" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="android.studio.capystorecomputer.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>
